--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -19,6 +19,9 @@ Text Domain: Snyder Recordings
 * - - 1.1 Typography
 * - 2.0 Div Styling
 * - - 2.1 Navigation Styling
+* - - 2.2 Site Hero Styling
+* - - 2.3 About Section Styling
+* - - 2.4 2.4 New Releases Slider Styling
 *
 */
 
@@ -27,46 +30,59 @@ Text Domain: Snyder Recordings
 /* --- --- --- 1.1 Typography --- --- --- */
 
 .hero {
-  font-family: font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-weight: 700;
   font-size: 65px;
   letter-spacing: .73px;
-  line-height: 76%;
+  line-height: 76px;
 }
 h1 {
-  font-family: font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-weight: 700;
   font-size: 40px;
   letter-spacing: 0px;
-  line-height: 50%;
+  line-height: 50px;
 }
 h2 {
-  font-family: font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-weight: 700;
   font-size: 30px;
   letter-spacing: 0px;
-  line-height: 40%;
+  line-height: 40px;
+  color: #001d5d;
 }
 h3 {
-  font-family: font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-weight: 700;
   font-size: 16px;
   letter-spacing: 1px;
-  line-height: 25%;
+  line-height: 25px;
 }
 button {
-  font-family: font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0px;
-  line-height: 18%;
+  line-height: 18px;
 }
 body {
-  font-family: font-family: 'Karla', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-weight: 400;
   font-size: 16px;
   letter-spacing: 0px;
-  line-height: 25%;
+  line-height: 25px;
+  margin: 0;
+}
+.btn {
+  background-color: #D9F0D0;
+  color: #68C242;
+  font-size: 15px;
+  padding: 15px 50px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #68C242;
+  color: #fff;
 }
 
 /* ------ --- --- --- 2.0 Div Styling --- --- ------ */
@@ -77,24 +93,141 @@ body {
   padding: 25px 50px;
   background-color: #ffffff;
   position: sticky;
+  position: -webkit-sticky;
+  top: 0px;
+  box-shadow: 0px 1px 9px #00000080;
 }
 .logo-container {
   display: inline-block;
 }
+.site-logo {
+  min-width: 100px;
+}
 .menu-container {
   display: inline-block;
   float: right;
+  padding-right: 25px;
 }
 .nav {
   list-style: none;
+  position: relative;
+  bottom: 20px;
 }
 .nav-items {
   display: inline-block;
-  padding: 10px;
+  padding: 10px 25px;
 }
 .nav-links {
   color: #001D5D;
   text-decoration: none;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0px;
+  line-height: 25%;
+}
+.nav-items:last-child .nav-links {
+  background-color: #D9F0D0;
+  color: #68C242;
+  font-size: 15px;
+  padding: 15px 50px;
+}
+.nav-items:last-child .nav-links:hover {
+  background-color: #68C242;
+  color: #fff;
+}
+.nav-icons {
+  padding-right: 10px;
+}
+
+/* --- --- --- 2.2 Site Hero Styling --- --- --- */
+
+.hero-container {
+  background-image: url("../img/images/image1.png");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  min-width: 100%;
+}
+.hero-content {
+  color: #fff;
+  padding: 20% 50px;
+  float: left;
+  max-width: 27%;
+}
+.hero-content p {
+  margin-bottom: 20px;
+}
+.video-link {
+  color: #fff;
+  text-decoration: none;
+}
+.video-link-inner {
+  position: relative;
+  bottom: 14px;
+}
+.play-img {
+  padding-right: 15px;
+}
+
+/* --- --- --- 2.3 About Section Styling --- --- --- */
+
+.about-container {
+  margin: 5%;
+}
+.row {
+  margin: auto;
+  display: block;
+  text-align: center;
+}
+.column {
+  margin: auto;
+  display: inline-block;
+  max-width: 40%;
+  padding-right: 20px;
+  vertical-align: top;
+}
+.column .left {
+  float: left;
+}
+.column .right {
+  float: right;
+}
+.about-img {
+  max-width: 100%;
+}
+.info-container {
+  padding-top: 5px;
+  max-width: 50%;
+  text-align: left;
+}
+.btn-container {
+  float: left;
+  position: relative;
+  bottom: 0px;
+  top: 7vh;
+}
+
+/* --- --- --- 2.4 New Releases Slider Styling --- --- --- */
+
+.slider-container {
+  background-color: #f6f6f6;
+}
+.slider-section {
+  padding: 50px 0px;
+}
+.slider-info {
+  display: block;
+  margin: auto;
+  text-align: center;
+  max-width: 25%;
+  padding-bottom: 50px;
+}
+.slider {
+  display: block;
+  margin: auto;
+  text-align: center;
 }
 
 /* --- --- --- End of Style --- --- --- */
