--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -21,7 +21,9 @@ Text Domain: Snyder Recordings
 * - - 2.1 Navigation Styling
 * - - 2.2 Site Hero Styling
 * - - 2.3 About Section Styling
-* - - 2.4 2.4 New Releases Slider Styling
+* - - 2.4 New Releases Slider Styling
+* - - 2.5 Map Section Styling
+* - - 2.6 Global Divs
 *
 */
 
@@ -96,6 +98,7 @@ body {
   position: -webkit-sticky;
   top: 0px;
   box-shadow: 0px 1px 9px #00000080;
+  z-index: 9999999;
 }
 .logo-container {
   display: inline-block;
@@ -176,24 +179,6 @@ body {
 .about-container {
   margin: 5%;
 }
-.row {
-  margin: auto;
-  display: block;
-  text-align: center;
-}
-.column {
-  margin: auto;
-  display: inline-block;
-  max-width: 40%;
-  padding-right: 20px;
-  vertical-align: top;
-}
-.column .left {
-  float: left;
-}
-.column .right {
-  float: right;
-}
 .about-img {
   max-width: 100%;
 }
@@ -228,6 +213,59 @@ body {
   display: block;
   margin: auto;
   text-align: center;
+}
+
+/* --- --- --- 2.5 Map Section Styling --- --- --- */
+
+#map {
+  height: 100%;
+  width: 100%;
+}
+html, body #map {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* --- --- --- 2.6 Contact Section Styling --- --- --- */
+
+.contact-img {
+  position: relative;
+  left: 42%;
+}
+.left-align {
+  text-align: left !important;
+}
+.form-container {
+  text-align: left !important;
+}
+
+/* --- --- --- 2.7 Global Divs --- --- --- */
+
+.site-wrapper {
+  max-width: 100%;
+  min-width: 100%;
+  overflow: hidden;
+  position: relative;
+  top: -15px;
+}
+.row {
+  margin: auto;
+  display: block;
+  text-align: center;
+}
+.column {
+  margin: auto;
+  display: inline-block;
+  max-width: 40%;
+  padding-right: 20px;
+  vertical-align: top;
+}
+.column .left {
+  float: left;
+}
+.column .right {
+  float: right;
 }
 
 /* --- --- --- End of Style --- --- --- */
