--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -150,11 +150,12 @@ body {
 
 .hero-container {
   background-image: url("../img/images/image1.png");
-  background-position: top;
+  background-position: top center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   height: 100vh;
   min-width: 100%;
+  transition: 5s;
 }
 .hero-content {
   color: #fff;
@@ -175,6 +176,12 @@ body {
 }
 .play-img {
   padding-right: 15px;
+}
+.zoom-in {
+    background-size: 110%;
+}
+.zoom-out {
+    background-size: 90%;
 }
 
 /* --- --- --- 2.3 About Section Styling --- --- --- */
