--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -222,7 +222,7 @@ a {
   margin: auto;
   text-align: center;
   max-width: 25%;
-  padding-bottom: 50px;
+  padding-bottom: 25px;
 }
 .slider {
   display: block;
@@ -231,35 +231,37 @@ a {
   display: inline-block;
 }
 .slider-box {
-  margin: 50px;
+  margin: 0px 25px 25px 25px;
   box-shadow: 0px 0px 50px -30px #000;
   border-radius: 10px;
-  padding: 10px;
-  height: 29vh;
-  width: 35vw;
   overflow: hidden;
 }
 .slider-img {
-  width: 10vw;
   background-color: #f6f6f6;
-  padding-left: 5px;
+  padding: 15px;
   display: inline-block;
 }
 .slider-content {
   background-color: #ffffff;
-  padding: 40px;
+  padding: 20px;
   text-align: left;
   display: inline-block;
-  width: 20vw;
-  height: 28vh;
-  position: relative;
-  bottom: 10px;
-  left: 31px;
 }
 .subtitle {
   color: #68c242;
   text-transform: uppercase;
   font-weight: 500;
+}
+.slick-nav-container {
+    margin: auto;
+    width: 100%;
+    text-align: center;
+}
+.slick-slide {
+   opacity: 0.5;
+}
+.slick-current {
+    opacity: 1;
 }
 
 /* --- --- --- 2.5 Map Section Styling --- --- --- */
