--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -19,6 +19,7 @@ Text Domain: Snyder Recordings
 * - - 1.1 Typography
 * - 2.0 Div Styling
 * - - 2.1 Navigation Styling
+* - - - 2.1.1 Mobile Navigation
 * - - 2.2 Site Hero Styling
 * - - 2.3 About Section Styling
 * - - 2.4 New Releases Slider Styling
@@ -27,10 +28,17 @@ Text Domain: Snyder Recordings
 * - - - 2.6.1 Contact Form Styling
 * - - 2.7 Footer Styling
 * - - 2.8 Global Divs
+* - 3.0 Media Queries
+* - - 3.1 Large Laptops
+* - - 3.2 Small Laptops/Landscape Tablets
+* - - 3.3 Tablets
+* - - 3.4 Large Phones
+* - - 3.5 Standard Phones
+* - - 3.6 Small Phones
 *
 */
 
-/* ------ --- --- --- 1.0 Text Formatting --- --- ------ */
+/* ------ --- --- --- 1.0 Text Formatting --- --- --- ------ */
 
 /* --- --- --- 1.1 Typography --- --- --- */
 
@@ -151,6 +159,35 @@ a {
   padding-right: 10px;
 }
 
+/* --- 2.1.1 Mobile Navigation --- */
+
+.mobile-menu {
+  padding: 15px;
+}
+.mob-btn {
+  width: 15px;
+  display: none;
+}
+.mob-menu {
+  display: none;
+  background-color: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  padding: 5px 50px;
+  position: absolute;
+  top: 1px;
+  left: 0px;
+}
+.mob-items {
+  display: block;
+  padding: 10px 0px 20px 0px;
+}
+.menu-closer {
+  display: block;
+  font-size: 15px;
+  padding: 7px 0px;
+}
+
 /* --- --- --- 2.2 Site Hero Styling --- --- --- */
 
 .hero-container {
@@ -205,17 +242,17 @@ a {
   padding-right: 20px;
 }
 .info-container {
-  max-width: 50%;
+  max-width: 60%;
   height: 40vh;
   text-align: left;
 }
 .info-container h2 {
-  line-height: 0px;
+  line-height: 25px;
 }
 .btn-container {
   float: left;
   position: relative;
-  bottom: 1.1vh;
+  bottom: 2.1vh;
 }
 
 /* --- --- --- 2.4 New Releases Slider Styling --- --- --- */
@@ -434,8 +471,8 @@ textarea {
   min-width: 100%;
   overflow: hidden;
   position: relative;
-  bottom: 15px;
-  margin-bottom: -242px;
+  bottom: 40px;
+  margin-bottom: -270px;
 }
 .row {
   margin: auto;
@@ -454,6 +491,210 @@ textarea {
 }
 .column .right {
   float: right;
+}
+
+/* ------ --- --- --- 3.0 Media Queries --- --- --- ------ */
+
+/* --- --- --- 3.2 Large Laptops --- --- --- */
+
+@media screen and (max-width: 1919px) and (min-width: 1440px) {
+  .about-controller {
+    max-height: 55vh;
+  }
+  .about-container .column {
+    max-width: 32%;
+  }
+  .info-container {
+    max-width: 80%;
+  }
+  .info-container p {
+    font-size: 12px;
+  }
+  .btn-container {
+    bottom: 1.7vh;
+  }
+  .about-img {
+    max-width: 142%;
+  }
+  .slider-box {
+    width: 550px !important;
+    margin: 0px 10px 15px 10px;
+  }
+  .slider-img {
+    width: 23%;
+  }
+  .slider-content {
+    width: 56%;
+  }
+}
+
+/* --- --- --- 3.2 Small Laptops/Horizontal Tablets --- --- --- */
+
+@media screen and (max-width: 1439px) and (min-width: 1024px) {
+  .menu-container {
+    padding-right: 0px;
+  }
+  .nav-items {
+    padding: 10px 10px;
+  }
+  .nav-links {
+    font-size: 15px;
+  }
+
+  .info-container {
+    max-width: 100%;
+    font-size: 14px;
+  }
+  .btn-container {
+    bottom: 3.1vh;
+  }
+  .about-img {
+    height: auto;
+    max-width: 160%;
+  }
+}
+
+/* --- --- --- 3.3 Tablets --- --- --- */
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .nav {
+    display: none;
+  }
+  .mob-btn {
+    display: block;
+  }
+  .hero-content {
+    max-width: 45%;
+  }
+  .column {
+    display: block;
+    max-width: 100%;
+  }
+  .info-container {
+    padding: 30px;
+    max-width: 100%;
+    height: auto;
+  }
+  .btn-container {
+    padding-left: 30px;
+  }
+  .about-controller {
+    max-height: 100%;
+  }
+}
+
+/* --- --- --- 3.4 Large Phones --- --- --- */
+
+@media screen and (max-width: 767px) and (min-width: 425px) {
+  .nav {
+    display: none;
+  }
+  .mob-btn {
+    display: block;
+  }
+  .hero-content {
+    max-width: 60%;
+  }
+  .hero-container {
+    height: 70vh;
+  }
+  .zoom-in {
+    background-size: 100%;
+  }
+  .column {
+    display: block;
+    max-width: 100%;
+  }
+  .info-container {
+    padding: 30px;
+    max-width: 100%;
+    height: auto;
+  }
+  .btn-container {
+    padding-left: 30px;
+  }
+  .about-img {
+    height: auto;
+  }
+  .about-controller {
+    max-height: 100%;
+  }
+}
+
+/* --- --- --- 3.5 Standard Phones --- --- --- */
+
+@media screen and (max-width: 424px) and (min-width: 375px) {
+  .nav {
+    display: none;
+  }
+  .mob-btn {
+    display: block;
+  }
+  .hero-content {
+    max-width: 65%;
+  }
+  .hero-container {
+    height: 70vh;
+  }
+  .zoom-in {
+    background-size: 100%;
+  }
+  .column {
+    display: block;
+    max-width: 100%;
+  }
+  .info-container {
+    padding: 30px;
+    max-width: 100%;
+    height: auto;
+  }
+  .btn-container {
+    padding-left: 30px;
+  }
+  .about-img {
+    height: auto;
+  }
+  .about-controller {
+    max-height: 100%;
+  }
+}
+
+/* --- --- --- 3.6 Small Phones --- --- --- */
+
+@media screen and (max-width: 375px) and (min-width: 320px) {
+  .nav {
+    display: none;
+  }
+  .mob-btn {
+    display: block;
+  }
+  .hero-content {
+    max-width: 65%;
+  }
+  .hero-container {
+    height: 70vh;
+  }
+  .zoom-in {
+    background-size: 100%;
+  }
+  .column {
+    display: block;
+    max-width: 100%;
+  }
+  .info-container {
+    padding: 30px;
+    max-width: 100%;
+    height: auto;
+  }
+  .btn-container {
+    padding-left: 30px;
+  }
+  .about-img {
+    height: auto;
+  }
+  .about-controller {
+    max-height: 100%;
+  }
 }
 
 /* --- --- --- End of Style --- --- --- */
